2004-05-21  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile: Switch default copyright date to 2004.
	* docbook: Likewise.
	* docbook-chapter: Likewise.
	* dtml: Likewise.
	* html: Likewise.
	* py: Likewise.
	* xml: Likewise.
	
2004-05-05  Nathaniel Smith  <njs@codesourcery.com>

	* GNUmakefile.in (build): Force executable bit on scripts in
	build directory.

2004-05-04  Nathaniel Smith  <njs@codesourcery.com>

	* setup.py: Import 'Extension'.
	Use it to build qm.sigmask.
	* qm/sigmask.c: New file.
	* qm/test/qmtest (main): Import 'qm.sigmask'; call
	'qm.sigmask.save_mask'.
	* qm/executable.py: Import 'qm.sigmask'.
	(Executable._InitializeChild): Call 'qm.sigmask.restore_mask'.
	
	* tests/xmldb/signals_unblocked.qmt: New test.
	* tests/xmldb/signals_unblocked_tmpdir.qma: New resource.
	
	* qmdist/command/check.py (check): Overhaul to respect
	QMTESTFLAGS and use the correct path to the QMTest executable.
	* GNUmakefile.in: Use "setup.py check" to run tests.
	* qm/test/qmtest (rel_libdir): When running out of source tree,
	use built library.
	
2004-03-30  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (htmllib): Import it.
	(StringIO): Likewise.
	(formatter): Likewise.
	(html_to_text): New function.
	* qm/test/classes/text_result_stream.py
	(TextResultStream._DisplayAnnotations): Use it.
	(formatter): Don't import it.
	(htmllib): Likewise.
	(StringIO): Likewise.
	(qm.common): Import it.
	(qm.fields): Likewise.
	
	* qm/test/result.py (cgi): Import it.
	(Result.Quote): New function.
	(Result.NoteException): Use it.
	* qm/test/classes/dg_test.py (DGTest._RunDGTest): Likewise.
	* qm/test/classes/command.py (ExecTestBase.RunProgram):
	Likewise.
	* qm/test/classes/dejagnu_base.py
	(DejaGNUBase._RecordCommandOutput): Likewise.
	(DejaGNUBase._RecordCommand): Likewise.
	* tests/regress/QMTest/selftest.py (RegTest.Run): Likewise.
	* tests/results_files/QMTest/results_file_test.py
	(ResultsFileTest.Run): Likewise.
