@@ -1,0 +1,5 @@
+<?xml version="1.0" ?>
+<!DOCTYPE extension
+  PUBLIC '-//QM/2.2/Extension//EN'
+  'http://www.codesourcery.com/qm/dtds/2.2/-//qm/2.2/extension//en.dtd'>
+<extension class="dependency_checking_resource.DependencyCheckingResource" kind="resource"><argument name="resources"><set/></argument></extension>
